# HMT

./: .gitignore  BACKLOG.md  README.md  TODO.md  pyproject.toml  train_baseline.py
.github/workflows/: ci.yml
configs/: baseline_adamw.yaml  baseline_qlora.yaml  hmt_full.yaml  hmt_stage1.yaml  hmt_stage2.yaml  hmt_stage3.yaml  hmt_stage6_apollo.yaml  hmt_stage6_apollo_channel.yaml  hmt_stage6_apollo_tensor.yaml
docs/results/2026-04-30/: README.md  ablation_1k.json  k_sweep.json  peak_mem_large.json  peak_mem_small.json
hmt/: data.py  eval.py  model_loader.py  profiler.py
hmt/autograd/: __init__.py  compressed_linear.py
hmt/memory/: __init__.py  activation_compress.py  checkpoint.py  policy.py
hmt/optim/: __init__.py  apollo.py  lowrank_adamw.py  projector.py  rank_scheduler.py  setup.py  spectrum.py
hmt/utils/: __init__.py  logger.py  seed.py
scripts/: k_sweep.py  measure_peak_mem.py  plot_metrics.py  run_matrix.py
tests/: test_activation_compress.py  test_apollo.py  test_checkpoint.py  test_compressed_linear.py  test_logger.py  test_lowrank_optim.py  test_policy.py  test_projector.py  test_rank_scheduler.py  test_seed.py  test_spectrum.py
